--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=Automaton Flightcontroller
+name=Automaton Multicopter
 version=0.9.0
 author=Tinkerspy <tinkerspy@myown.mailcan.com>
 maintainer=Tinkerspy <tinkerspy@myown.mailcan.com>
@@ -7,3 +7,5 @@ paragraph=A library for creating event driven flight controllers for Arduino bas
 category=Other
 url=https://github.com/tinkerspy/Automaton/wiki
 architectures=*
+dot_a_linkage=false
+includes=Automaton_Multicopter.h
